Source/WebCore/platform/mediastream/RealtimeMediaSource.h
@@ -39,6 +39,7 @@
 #include "AudioSourceProvider.h"
 #include "Image.h"
 #include "MediaConstraints.h"
+#include "MediaSample.h"
 #include "PlatformLayer.h"
 #include "RealtimeMediaSourceCapabilities.h"
 #include <wtf/RefCounted.h>
@@ -66,6 +67,9 @@ public:
 
         // Observer state queries.
         virtual bool preventSourceFromStopping() = 0;
+        
+        // Media data changes.
+        virtual void sourceHasMoreMediaData(MediaSample&) = 0;
     };
 
     virtual ~RealtimeMediaSource() { }
@@ -87,6 +91,7 @@ public:
     virtual RefPtr<RealtimeMediaSourceCapabilities> capabilities() = 0;
     virtual const RealtimeMediaSourceSettings& settings() = 0;
     void settingsDidChanged();
+    void mediaDataUpdated(MediaSample&);
     
     bool stopped() const { return m_stopped; }
 
